--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,23 @@
     user-select: none;
     z-index: 1;
 }
+.card span {
+    position: absolute;
+    margin: 10px 0px 0 0;
+    padding: 5px 5px 5px 5px;
+    background-color: red;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bolder;
+}
+.information ul {
+    padding: 0;
+    margin: 0;
+}
+.information ul li:nth-child(odd) {
+    background-color: #eee;
+}
+
+.information ul li {
+    padding: 10px;
+}
